# vin_decoder

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: testing.yml
app/: catboost_app.py  gunicorn.py  schemas.py
config/: config.py  run_id.txt
data/: .gitignore  data_validation.dvc  preprocessed_labels.dvc
data/raw/: .gitignore  ml-engineer-challenge-redacted-data.csv.dvc
notebooks/: data_validation.ipynb  eda.ipynb  label_preprocessing.ipynb  nested_cv.ipynb
notebooks/misc/: Excalidraw-full-hierarchy.excalidraw  Excalidraw-simple-hierarchy.excalidraw
tests/code/: test_utils.py
vin_decoder/: data_validation.py  feature_engineering.py  label_preprocessing.py  main.py  model_training.py  predict.py  utils.py
