[tool.poetry]
name = "vin_decoder"
version = "0.1.0"
description = ""
authors = ["Erikas Valinskas <ervalinskas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.0"
dvc = "^2.54.0"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
scikit-learn = "^1.2.2"
catboost = "^1.1.1"
mlflow = "^2.3.0"
hyperopt = "^0.2.7"
streamlit = "^1.21.0"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
seaborn = "^0.12.2"
pre-commit = "^3.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
great-expectations = "^0.16.7"


[tool.poetry.group.style.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
  )/
'''

[tool.isort]
profile = "black"
